<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ebates_selector_list_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSidebarName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_padding_1_2"
        android:layout_marginLeft="@dimen/sidebar_info_margin"
        android:layout_marginRight="@dimen/sidebar_info_margin"
        android:layout_marginTop="@dimen/sidebar_info_margin"
        android:fontFamily="@string/font_roboto_bold"
        android:textColor="@color/eba_green"
        android:textSize="@dimen/sidebar_footer_name_textsize"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_section_thickness"
        android:layout_marginBottom="@dimen/standard_padding_3_4"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:background="@color/eba_green"/>

    <LinearLayout style="@style/SidebarInfoLayout">

        <TextView
            android:id="@+id/txtSidebarCashPaidDiscription"
            style="@style/SidebarInfoDescription"
            android:fontFamily="@string/font_roboto_light"
            android:text="@string/sidebar_cash_paid"/>

        <TextView
            android:id="@+id/txtSidebarCashPaidValue"
            style="@style/SidebarInfoValue"
            android:fontFamily="@string/font_roboto_light"/>
    </LinearLayout>

    <LinearLayout style="@style/SidebarInfoLayout">

        <TextView
            android:id="@+id/txtSidebarCashPendingDiscription"
            style="@style/SidebarInfoDescription"
            android:fontFamily="@string/font_roboto_light"
            android:text="@string/sidebar_cash_pending"/>

        <TextView
            android:id="@+id/txtSidebarCashPendingValue"
            style="@style/SidebarInfoValue"
            android:fontFamily="@string/font_roboto_light"/>
    </LinearLayout>

    <LinearLayout style="@style/SidebarInfoLayout">

        <TextView
            android:id="@+id/txtSidebarTotalCashDiscription"
            style="@style/SidebarInfoDescription"
            android:fontFamily="@string/font_roboto_light"
            android:text="@string/sidebar_total_cash"/>

        <TextView
            android:id="@+id/txtSidebarTotalCashValue"
            style="@style/SidebarInfoValue"
            android:fontFamily="@string/font_roboto_light"/>
    </LinearLayout>

    <LinearLayout style="@style/SidebarInfoLayout">

        <TextView
            android:id="@+id/txtSidebarNextCashDiscription"
            style="@style/SidebarInfoDescription"
            android:fontFamily="@string/font_roboto_light"
            android:text="@string/sidebar_next_cash"/>

        <TextView
            android:id="@+id/txtSidebarNextCashValue"
            style="@style/SidebarInfoValue"
            android:fontFamily="@string/font_roboto_light"/>
    </LinearLayout>


</LinearLayout>