<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ToastSideMenu.twotoasters.com.toastsidemenu.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/txt_content"
        android:text="@string/ebates_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_change_cash"
        android:layout_margin="16dp"
        android:text="@string/ebates_cash_pending"
        android:layout_below="@id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_change_icon"
        android:layout_margin="16dp"
        android:text="@string/ebates_btn_change_featured_image"
        android:layout_below="@id/btn_change_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
